[package]
name = "blockchain-technologies-assignment-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
bs58 = "0.5.0"
hex = "0.4.3"
rand = "0.8.5"
reqwest = "0.11.22"
rust-crypto = "0.2.36"
secp256k1 = { git = "https://github.com/rust-bitcoin/rust-secp256k1/", features = ["rand","hashes"]}
serde = "1.0.190"
serde_json = "1.0.108"
sha256 = "1.4.0"
tokio = { version = "1.33.0", features = ["full"] }
